# cc-backend

./: .env  .gitignore  README.md  app.py  check_status.py  config.py  env.example  main.py  pyproject.toml  requirements.txt  setup.py
api/: dependencies.py  models.py  routes.py
api/routers/: __init__.py  assistant.py  audio.py  conversations.py  users.py  voices.py
database/: __init__.py  connection.py  migrations.py  models.py  repository.py  supabase.py
examples/: new_format_example.json
services/: TTS_test.py  assistant_service.py  conversation_processor.py  elevenlabs_service.py  mediaupload.py  summarizer.py  whatsapp_parser.py
