[project]
name = "cc-backend"
version = "0.1.0"
description = "Multi-Platform Conversation Summarizer API with FastAPI"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "httpx>=0.26.0",
    "openai==1.3.0",
    "elevenlabs==0.2.26",
    "Pillow==10.1.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "pydub==0.25.1",
    "python-dateutil==2.8.2",
    "colorlog==6.8.0",
    "supabase==2.16.0",
    "supafunc==0.10.1",
    "deprecation==2.1.0",
    "gotrue==2.12.2",
    "h2==4.2.0",
    "hpack==4.1.0",
    "hyperframe==6.1.0",
    "postgrest==1.1.1",
    "pyjwt==2.10.1",
    "realtime==2.5.3",
    "storage3==0.12.0",
    "strenum==0.4.15",
    "uuid==1.30",
    "slowapi==0.1.9",
    "celery==5.3.4",
    "redis==5.0.1",
]

[project.optional-dependencies]
calendar = [
    "google-auth==2.23.4",
    "google-auth-oauthlib==1.1.0",
    "google-auth-httplib2==0.1.1",
    "google-api-python-client==2.108.0",
]

[dependency-groups]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-mock==3.14.1",
    "black==23.11.0",
    "flake8==6.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
default-groups = ["dev"]
